--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,21 @@ html, body {
 }
 
 /* Main */
+/* Top banner */
+.topbanner {
+	height: 20px;
+	background-color: rgb(233,71,69);
+}
+.logo {
+	padding-top: 40px;
+	padding-bottom: 20px;
+	width: 200px;
+	height: 200px;
+}
 h1 {
 	font: 900 90px/100px "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: rgb(233,71,69);
+	margin: 0;
 }
 
 .demo-logo {
@@ -21,4 +33,20 @@ h1 {
 	font-weight: 700;
 	letter-spacing: 0;
 	padding-top: 5px;
+}
+
+/* Content */
+.content {
+	text-align: center;
+	margin: 0 auto;
+}
+
+.menu-btns {
+	max-width: 300px;
+	padding: 10px;
+	margin: auto;
+}
+
+.menu-btn {
+	width: 100%;
 }
