--- a/css/create.css
+++ b/css/create.css
@@ -19,16 +19,37 @@
 /* Picture part */
 #uploadedPic {
 	height: 100%;
-	visibility: hidden;
+}
+
+.uploadedPicArea {
+	position: relative;
+	display: inline-block;
+	height: 100%;
+}
+
+.points {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+.point {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	margin-left: -10px;
+	margin-top: -10px;
 }
 
 .campaignPicArea {
-	visibility: hidden;
+	/*visibility: hidden;*/
 }
 
 .pictureArea {
+	display: none;
 	height: 100%;
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .upperPicArea {
